# CyberDom-Qt

./: .gitignore  CMakeLists.txt  CyberDom-Qt.kdev4  CyberDom.pro  Doxyfile  Info.plist  README.md  Readme.md  ScriptData.h  ScriptData.h.bak  ScriptUtils.cpp  ScriptUtils.h  about.cpp  about.h  about.ui  addclothing.cpp  addclothing.h  addclothing.ui  addclothtype.cpp  addclothtype.h  addclothtype.ui  askclothing.cpp  askclothing.h  askclothing.ui  askinstructions.cpp  askinstructions.h  askinstructions.ui  askpunishment.cpp  askpunishment.h  askpunishment.ui  assignments.cpp  assignments.cpp.bak  assignments.h  assignments.ui  calendarview.cpp  calendarview.h  calendarview.ui  changemerits.cpp  changemerits.h  changemerits.ui  (+65 more)
.github/ISSUE_TEMPLATE/: bug-report.md
.github/workflows/: ci.yml
.kdev4/: CyberDom-Qt.kdev4
resources/: cyberdom.desktop
scripts/: demo-female.ini
src/Core/: ScriptData.h  ScriptUtils.cpp  ScriptUtils.h  clothingitem.cpp  clothingitem.h  main.cpp  scriptparser.cpp  scriptparser.h
src/Dialogs/Clothing/: addclothing.cpp  addclothing.h  addclothtype.ui  askclothing.cpp  askclothing.h  askclothing.ui  reportclothing.cpp  reportclothing.h  reportclothing.ui
src/Dialogs/General/: about.cpp  about.ui  askinstructions.cpp  askinstructions.h  askinstructions.ui  datainspectordialog.cpp  datainspectordialog.h  datainspectordialog.ui  rules.cpp  rules.ui  timeadd.cpp  timeadd.h  timeadd.ui
src/Dialogs/Management/: askpunishment.h  askpunishment.ui  assignments.cpp  assignments.h  assignments.ui  changemerits.ui  changestatus.ui  deleteassignments.ui  joblaunch.ui  listflags.h  listflags.ui  selectpopup.cpp  selectpopup.h  selectpunishment.h  selectpunishment.ui  setflags.ui
src/Dialogs/Tasks/: detention.cpp  detention.ui  linewriter.ui  pointcameradialog.h  pointcameradialog.ui  posecameradialog.cpp  posecameradialog.ui  questiondialog.ui
src/Gui/: cyberdom.cpp  cyberdom.h  cyberdom.ui  mainwindow.cpp  mainwindow.h
src/Widgets/: calendarview.cpp  calendarview.h  googlecalendarwidget.cpp  googlecalendarwidget.h
tests/: mixedcase_script.ini  punishmenttest.cpp  session_test.cpp  signininterval_test.cpp  tests.pro
